--- a/Escaping_Ring/.classpath
+++ b/Escaping_Ring/.classpath
@@ -2,11 +2,11 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/ij-1.51h.jar"/>
-	<classpathentry kind="lib" path="lib/jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="lib/jgoodies-forms-1.8.0.jar"/>
-	<classpathentry kind="lib" path="lib/miglayout-src.zip"/>
-	<classpathentry kind="lib" path="lib/miglayout15-swing.jar"/>
-	<classpathentry kind="lib" path="lib/jgoodies-common-1.8.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ij-1.51h.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/miglayout-src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/miglayout15-swing.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jgoodies-common-1.8.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
