--- a/Escaping_Ring/plugins.config
+++ b/Escaping_Ring/plugins.config
@@ -6,6 +6,4 @@
 
 # Date: 26 December 2017
 
-Plugins>3D Vessel Tracer, "Espacing Ring", Espacing_Ring
-Plugins>3D Vessel Tracer, "Vascular Simulator", Vascular_Simulator
-Plugins>3D Vessel Tracer, "Test Mask", Test_Mask
+Plugins>3D Vessel Tracer, "Espacing Ring", Espacing_Ring.class
