--- a/Escaping_Ring/plugins.config
+++ b/Escaping_Ring/plugins.config
@@ -1,9 +1,4 @@
-# Name: EscapingRing
 
-# Daniel Sage
-# Biomedical Imaging Group
-# Ecole Polytechnique Federale de Lausanne (EPFL), Lausanne, Switzerland
 
-# Date: 26 December 2017
+Plugins, "Vessel3DTracer", Espacing_Ring
 
-Plugins>3D Vessel Tracer, "Espacing Ring", Espacing_Ring.class
