--- a/Escaping_Ring/pom.xml
+++ b/Escaping_Ring/pom.xml
@@ -14,16 +14,16 @@
 
 	<groupId>trusohamn</groupId>
 	<artifactId>vessel_3dtracer</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.1</version>
 
 	<name>Vessel3DTracer</name>
-	<description>This example provides an introduction to writing ImageJ commands.</description>
-	<url>https://github.com/[MY-ORG]/[MY-REPO]</url>
+	<url>https://github.com/trusohamn/vessel3dtracer</url>
 	<inceptionYear>2017</inceptionYear>
 	<organization>
-		<name>[MY-ORGANIZATION-NAME]</name>
-		<url>[MY-ORGANIZATION-WEB-SITE]</url>
+		<name>Karolinska Institutet</name>
+		<url>-</url>
 	</organization>
+
 	<licenses>
 		<license>
 			<name>CC0 1.0 Universal License</name>
@@ -35,10 +35,11 @@
 	<developers>
 		<developer>
 			<id>trusohamn</id>
-			<name>[MY-FULL-NAME]</name>
-			<url>https://imagej.net/User:[MY-IMAGEJ-WIKI-ACCOUNT]</url>
+			<name>Marta Trusohamn</name>
+			<url>https://imagej.net/User:Trusohamn</url>
 		</developer>
 	</developers>
+	
 	<contributors>
 		<contributor>
 			<name>None</name>
@@ -67,8 +68,8 @@
 	</ciManagement>
 
 	<properties>
-		<package-name>com.mycompany.imagej</package-name>
-		<main-class>com.mycompany.imagej.GaussFiltering</main-class>
+		<package-name>com.trusohamn.v3t</package-name>
+		<main-class>com.trusohamn.v3t.Escaping_Ring</main-class>
 		<license.licenseName>cc0</license.licenseName>
 		<license.copyrightOwners>N/A</license.copyrightOwners>
 		<license.projectName>N/A</license.projectName>
@@ -97,4 +98,5 @@
 			<artifactId>imagej-legacy</artifactId>
 		</dependency>
 	</dependencies>
+	<description>ImageJ plugin for 3D vessel detection, segmentation and analysis</description>
 </project>
